plugins/CoreHome/stylesheets/dataTable/_dataTable.less
/* ... */
.tableIcon {
  text-decoration: none;

  &:hover {
    text-decoration: none;
  }

  &.activeIcon {
    background-color: @theme-color-background-tinyContrast;
  }
}

.tableIconsGroup > span > span {
  position:relative;
  float:left;
}

.dataTableFooterActiveItem {
  display: none;
  position: absolute;
  top: -6px;
  left: 0;
}


.exportToFormatItems img {
  vertical-align: middle;
  margin: -4px -3px -2px 2px;
}

.tableIconsGroup {
  float: left;
  padding-right: 4px;
}

.tableIconsGroup .tableIcon span {
  margin-right: 5px;
  margin-left: 5px;
}

.tableIconsGroup img {
  vertical-align: bottom;
}

.tableIconsGroupActive {
  display: block;
  float: left;
  background: #dcdacf;
  border-radius: 2px;
}

.tableIconsGroupActive .tableIcon {
  background: none;
}

.tableIconsGroupActive .tableIcon:hover {
  background: #e9e8e1;
}

.dataTableSpacer {
  clear: both;
}

/* Actions table */
.dataTableActions table.dataTable tr td.label {
  background-image: none;
}

/* levels higher than 4 have a default padding left */
.actionsDataTable tr td.label {
  padding-left: 7em;
}

tr.level0 td.label {
  padding-left: 20px !important;
}

.widget {
  div.dataTable:not(.isComparing) table.dataTable tr.level0 td.label,
  div.dataTable:not(.isComparing) table.dataTable th {
    padding-left: 12px !important;
  }
}

tr.level1 td.label {
  padding-left: 2.5em !important;

  .widget & {
    padding-left: 28px !important;
  }
}

tr.level2 td.label {
  padding-left: 3.5em !important;
}

tr.level3 td.label {
  padding-left: 4.5em !important;
}

tr.level4 td.label {
  padding-left: 5em !important;
}
tr.level5 td.label {
  padding-left: 5.5em !important;
}
tr.level6 td.label {
  padding-left: 6em !important;
}
tr.level7 td.label {
  padding-left: 6.5em !important;
}
tr.level8 td.label {
  padding-left: 7em !important;
}
tr.level9 td.label {
  padding-left: 7.5em !important;
}
tr.level10 td.label {
  padding-left: 8em !important;
}
tr.level11 td.label {
  padding-left: 8.5em !important;
}
tr.level12 td.label {
  padding-left: 9em !important;
}

table.dataTable td.label img {
  max-height: 16px;
}

.pk-emptyDataTable {
  padding-top: 20px;
  padding-bottom: 10px;
  padding-left: 1px;
}

.widget .pk-emptyDataTable {
  padding-left: 0;
  padding-top: 33px;
  text-align: center;
}

.helpDate {
  color: #777777;
  font-size: 11px;
  font-style: italic;
  padding: 4px;
  text-align: right;
  display: block;
}

body .ui-tooltip.rowActionTooltip {
  font-size: 11px;
  padding: 3px 5px 3px 6px;
}

table.dataTable span.cell-tooltip {
  cursor: default;
}

.dataTable .jqplot-graph {
  > div {
    position: relative;
  }
}

td.cellSubDataTable .loadingPiwik {
  padding:0;
}

.dataTable .searchReset {
  position:relative;

  img {
    position: absolute;
    top: 4px;
    left: -15px;
    cursor: pointer;
    display: inline;
  }
}

.dataTableControls {
  text-align: left;
  padding-left: 0 !important;

  &.col {
    padding-right: 0;
  }

  .dropdown-content {
    a {
      &:hover {
        text-decoration: none;
      }
    }
  }

  .dataTableAction {
    border: 0;
    border: none;
    border-radius: 2px;
    display: inline-block;
    height: 36px;
    line-height: 36px;
    outline: 0;
    width: 36px;
    text-transform: uppercase;
    vertical-align: middle;
    text-decoration: none !important;
    text-align: center;
    font-size: 16px;
    color: @theme-color-brand !important;
    opacity: 0.7;
    &:hover {
      color: @theme-color-brand !important;
      opacity: 1;
      background-color: @theme-color-background-base;
      text-decoration: none !important;
    }

    .icon-export {
      margin-top: 8px;
      display: block;
    }

    .icon-more-verti {
      font-size: 18px;
    }

    .periodName {
      padding-left:8px;
      padding-right:8px;
      font-size:16px;
      text-transform:capitalize;
    }
  }

  .activatePeriodsSelection {
    width:auto;
    text-align:left;
    padding-left:8px;
  }
}
.widgetContent {
  div.dataTableScroller {
    overflow-x: scroll;
  }
}
.dataTableHeaderControls {
  margin-top: -10px;
  margin-bottom: 5px;

  .widgetpreview-preview .widget &,
  #dashboardWidgetsArea .widget &,
  .dataTable.isDataTableEmpty:not(.hasSearchKeyword) & {
    display: none;
  }
}

.theWidgetContent .card .card-content, table.dataTable {
  div.dataTableScroller {
    margin-left: -20px;
    width: ~"calc(100% + 40px)";
  }
}

#dashboard .dataTableFooterNavigation > .row {
  margin-left: 0;
  margin-right: 0;
}

@media only screen and (min-width: 993px) {
  #dashboardWidgetsArea .widget,
  .theWidgetContent .isDataTableEmpty {
    &:hover {
      .limitSelection,
      .dataTableControls .dataTableAction {
        visibility: visible;
      }
    }
    .limitSelection,
    .dataTableControls .dataTableAction {
      visibility: hidden;

      &.forceActionVisible {
        visibility: visible;
      }
    }
  }
  .theWidgetContent .isDataTableEmpty.hasSearchKeyword {
    .limitSelection,
    .dataTableControls .dataTableAction {
      visibility: visible;
    }
  }
}

@media only screen and (max-width: 700px) {
  table.dataTable th.label,
  table.dataTable td.label,
  table.subActionsDataTable td.label,
  table.actionsDataTable td.label {
    position: static !important;
  }
}

